# tailwindcss

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/tailwindcss/: __init__.py  package.json  tailwindcss.py  test_tailwindcss.py
pelican/plugins/tailwindcss/test_data/: input.css  tailwind.config.js
pelican/plugins/tailwindcss/utils/: commands.py  installs.py  utils.py
